libs/wingc/src/jsify/captures/snapshots/wingc__jsify__captures__tests__inflight_field.snap
---
source: libs/wingc/src/jsify/captures/tests.rs
expression: "capture_ok(r#\"\n    class A {\n      inflight x: str;\n      inflight init() {\n        this.x = \"hello\";\n      }\n\n      inflight method() {\n        log(this.x);\n      }\n    }\n    \"#)"
---
======================================================
Files:

inflight.A.js
------------------------------------------------------
module.exports = function({  }) {
  class A {
    async $inflight_init()  {
      this.x = "hello";
    }
    async method()  {
      {console.log(this.x)};
    }
    constructor({  }) {
    }
  }
  return A;
}

preflight.js
------------------------------------------------------
class A extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this._addInflightOps("method", "x");
  }
  static _toInflightType(context) {
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.A.js")({ 
      })
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const client = new (${A._toInflightType(this).text})({
        });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
}

