libs/wingc/src/jsify/captures/snapshots/wingc__jsify__captures__tests__inflight_field_from_inflight.snap
---
source: libs/wingc/src/jsify/captures/tests.rs
expression: "capture_ok(r#\"\n    class MyType {\n      inflight s: str;\n      inflight init() {\n        this.s = \"hey there!\";\n      }\n      inflight foo() {\n        log(this.s);\n      }\n    }\n    \"#)"
---
======================================================
Captured by MyType:

======================================================
Files:

main.w
------------------------------------------------------

    class MyType {
      inflight s: str;
      inflight init() {
        this.s = "hey there!";
      }
      inflight foo() {
        log(this.s);
      }
    }
    
preflight.js
------------------------------------------------------
class MyType extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this._addInflightOps("foo", "$inflight_init", "s");
  }
  static _toInflightType(context) {
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.MyType.js")({})
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const client = new (${MyType._toInflightType(this).text})({ });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
}

inflight.MyType.js
------------------------------------------------------
module.exports = function({  }) {
  class MyType {
    constructor({  }) {
    }
    async foo()  {
      {console.log(this.s)};
    }
    async $inflight_init()  {
      this.s = "hey there!";
    }
  }
  return MyType;
}

