libs/wingc/src/jsify/captures/snapshots/wingc__jsify__captures__tests__nested_preflight_operation.snap
---
source: libs/wingc/src/jsify/captures/tests.rs
expression: "capture_ok(r#\"\n    bring cloud;\n    class YourType {\n      b: cloud.Bucket;\n      init() {\n        this.b = new cloud.Bucket();\n      }\n    }\n    class MyType {\n      y: YourType;\n      init() {\n        this.y = new YourType();\n      }\n    }\n\n    let t = new MyType();\n\n    test \"test\" {\n      t.y.b.put(\"hello\", \"world\");\n    }\n    \"#)"
---
======================================================
Files:

inflight.$Closure1.js
------------------------------------------------------
module.exports = function({ $t_y_b }) {
  class $Closure1 {
    async handle()  {
      (await $t_y_b.put("hello","world"));
    }
    constructor({  }) {
      const $obj = (...args) => this.handle(...args);
      Object.setPrototypeOf($obj, this);
      return $obj;
    }
  }
  return $Closure1;
}

inflight.MyType.js
------------------------------------------------------
module.exports = function({  }) {
  class MyType {
    constructor({  }) {
    }
  }
  return MyType;
}

inflight.YourType.js
------------------------------------------------------
module.exports = function({  }) {
  class YourType {
    constructor({  }) {
    }
  }
  return YourType;
}

preflight.js
------------------------------------------------------
const cloud = require('@winglang/sdk').cloud;
class YourType extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this.b = this.node.root.newAbstract("@winglang/sdk.cloud.Bucket",this,"cloud.Bucket");
  }
  static _toInflightType(context) {
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.YourType.js")({ 
      })
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const client = new (${YourType._toInflightType(this).text})({
        });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
}
class MyType extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this.y = new YourType(this,"YourType");
  }
  static _toInflightType(context) {
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.MyType.js")({ 
      })
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const client = new (${MyType._toInflightType(this).text})({
        });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
}
class $Closure1 extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this._addInflightOps("handle");
    this.display.hidden = true;
  }
  static _toInflightType(context) {
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.$Closure1.js")({ 
        $t_y_b: ${context._lift(t.y.b)},
      })
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const client = new (${$Closure1._toInflightType(this).text})({
        });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
  _registerBind(host, ops) {
    if (ops.includes("handle")) {
      $Closure1._registerBindObject(t.y.b, host, ["put"]);
    }
    super._registerBind(host, ops);
  }
}
const t = new MyType(this,"MyType");
this.node.root.new("@winglang/sdk.std.Test",std.Test,this,"test:test",new $Closure1(this,"$Closure1"));

